<resources>
    <string name="app_name">StoryApp</string>

    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="logout">logout</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="desc">Description</string>

    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>

    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="dont_have_an_account">Don\'t have an account? </string>
    <string name="already_have_an_account">Already have an account?</string>

    <string name="list_story">List Story</string>
    <string name="language">Language</string>
    <string name="map">Story Map</string>
    <string name="add_story">Create new story</string>

    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="hello">Hello</string>

    <string name="get_my_last_location">Get my last location?</string>
    <string name="choose_a_picture">Choose a picture</string>
    <string name="location_not_found">Location is not found. Try Again</string>

    <!--    Content Description   -->

    <string name="desc_image_welcome">Image Welcome</string>
    <string name="desc_image_login">Image Login</string>
    <string name="desc_image_register">Image Register</string>
    <string name="desc_add_new_story">Add new story</string>
    <string name="image_profile">Image Profile</string>
    <string name="desc_back_button_from_detail_image">Back button from detail image</string>
    <string name="desc_setting_button">Setting button</string>
    <string name="desc_detail_image">Detail image</string>
    <string name="desc_capture_image">Capture Image</string>
    <string name="desc_map_button">map button</string>

    <!--    Error String    -->

    <string name="error_empty_value">%s can\'t be empty</string>
    <string name="error_length">%1$s must be at least %2$d characters long</string>
    <string name="error_email_format">Please enter a valid email</string>
    <string name="image_cant_be_empty">Image can\'t be empty</string>
    <string name="failed_open_camera">Failed to open the camera</string>
    <string name="failed_to_capture">Failed to take a photo</string>
    <string name="not_getting_permission">Not getting permission</string>
    <string name="text_error">Error : %s</string>



</resources>