<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.add.AddStoryActivity">

    <ImageView
        android:id="@+id/iv_preview_image"
        android:transitionName="image"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/selection"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_profile" />

    <TextView
        android:id="@+id/tv_error_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/error"
        android:visibility="gone"
        android:text="@string/image_cant_be_empty"
        app:layout_constraintLeft_toLeftOf="@id/iv_preview_image"
        app:layout_constraintTop_toBottomOf="@id/iv_preview_image"/>

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:background="@drawable/style_rounded_button"
        style="@style/description"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dimen_32dp"
        app:layout_constraintRight_toLeftOf="@id/btn_gallery"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_preview_image"/>

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:background="@drawable/style_rounded_button"
        style="@style/description"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dimen_32dp"
        app:layout_constraintLeft_toRightOf="@id/btn_camera"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_preview_image"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_layout_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_gallery">

        <com.karsatech.storyapp.view.customview.CustomEditTextMultilines
            android:id="@+id/descEditText"
            style="@style/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:lines="3"/>

    </com.google.android.material.textfield.TextInputLayout>
    
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_my_last_location"
        android:backgroundTint="@color/elm"
        android:buttonTint="@color/elm"
        app:layout_constraintTop_toBottomOf="@id/et_layout_description"
        app:layout_constraintLeft_toLeftOf="@id/et_layout_description"/>

    <com.karsatech.storyapp.view.customview.CustomButton
        android:id="@+id/btn_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:background="@drawable/style_rounded_button"
        style="@style/description"
        android:enabled="false"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_margin="@dimen/dimen_24dp"
        app:layout_constraintLeft_toRightOf="@id/btn_camera"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_24dp"
        android:visibility="gone"
        android:indeterminateTint="@color/elm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>